fix: rating contrast ratio

--- a/styles/product-page.css
+++ b/styles/product-page.css
@@ -42,7 +42,7 @@
 }
 
 .product-rating{
-    padding: 6px 8px;
+    padding: 5px 10px;
     margin-left:1.5rem;
 }
 
